--- a/lang/fr.json
+++ b/lang/fr.json
@@ -61,5 +61,48 @@
     "CATS.CaracCaresse": "Caresse (intelligence)",
     "CATS.CaracRonronnement": "Ronronnement (Volonté)",
     "CATS.CaracCoussinet": "Coussinet (Intuition)",
-    "CATS.CaracVibrisse": "Vibrisse (Sociabilité)"
+    "CATS.CaracVibrisse": "Vibrisse (Sociabilité)",
+
+    "CATS.SkillChasse": "Chasse",
+    "CATS.SkillCultureGeneral": "Culture General",
+    "CATS.SkillCombatGriffu": "Combat Griffu",
+    "CATS.SkillConnaisanceRue": "Connaisance Rue",
+    "CATS.SkillDiscretion": "Discretion",
+    "CATS.SkillEnerverHumain": "Enerver Humain",
+    "CATS.SkillLangageHumain": "Langage Humain",
+    "CATS.SkillLeadership": "Leadership",
+    "CATS.SkillOdorat": "Odorat",
+    "CATS.SkillOrientation": "Orientation",
+    "CATS.SkillPsychologieHumaine": "Psychologie Humaine",
+    "CATS.SkillReclamerManger": "Reclamer Manger",
+    "CATS.SkillReclamerCaresses": "Reclamer Caresses",
+    "CATS.SkillSaut": "Saut",
+    "CATS.SkillSeduire": "Seduire",
+    "CATS.SkillSurvie": "Survie",
+    "CATS.SkillRepererTrouver": "Reperer Trouver",
+    "CATS.SkillCoutumesHumaine": "Coutumes Humaine",
+    "CATS.SkillUtiliserObjet": "Utiliser Objet",
+    
+    "CATS.TalentArmure": "Armure",
+    "CATS.TalentAllergene": "Allergene",
+    "CATS.TalentArretTemporel": "Arret Temporel",
+    "CATS.TalentBrouilleurElectronique": "Brouilleur Electronique",
+    "CATS.TalentClairaudience": "Clairaudience",
+    "CATS.TalentClairvoyance": "Clairvoyance",
+    "CATS.TalentControleGravitationel": "Controle Gravitationel",
+    "CATS.TalentControleMental": "Controle Mental",
+    "CATS.TalentDeplacementTemporel": "Deplacement Temporel",
+    "CATS.TalentEffetSchrodinger": "Effet Schrodinger",
+    "CATS.TalentForce": "Force",
+    "CATS.TalentHypnose": "Hypnose",
+    "CATS.TalentPasseMuraille": "Passe Muraille",
+    "CATS.TalentPesanteur": "Pesanteur",
+    "CATS.TalentPoltergeist": "Poltergeist",
+    "CATS.TalentPrescience": "Prescience",
+    "CATS.TalentRegeneration": "Regeneration",
+    "CATS.TalentSixiemeSens": "SixiemeSens",
+    "CATS.TalentSommeil": "Sommeil",
+    "CATS.TalentTelekinesie": "Telekinesie",
+    "CATS.TalentTelepathie": "Telepathie",
+    "CATS.TalentTeleportation": "Teleportation"
   }
