--- a/lang/fr.json
+++ b/lang/fr.json
@@ -1,4 +1,6 @@
 {
+    "ACTOR.TypeChat": "Chat",
+
     "SETTINGS.SimpleMacroShorthandN": "Shortened Macro Syntax",
     "SETTINGS.SimpleMacroShorthandL": "Enable a shortened macro syntax which allows referencing attributes directly, for example @str instead of @attributes.str.value. Disable this setting if you need the ability to reference the full attribute model, for example @attributes.str.label.",
     "SETTINGS.SimpleInitFormulaN": "Initiative Formula",
@@ -82,7 +84,7 @@
     "CATS.SkillRepererTrouver": "Reperer Trouver",
     "CATS.SkillCoutumesHumaine": "Coutumes Humaine",
     "CATS.SkillUtiliserObjet": "Utiliser Objet",
-    
+
     "CATS.TalentArmure": "Armure",
     "CATS.TalentAllergene": "Allergene",
     "CATS.TalentArretTemporel": "Arret Temporel",
