Visual Update Part-2

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -55,15 +55,15 @@
     "CATS.RaceSiamois": "Siamois",
     "CATS.RaceSomali": "Somali",
 
-    "CATS.CaracGriffe": "Griffe (Force)",
-    "CATS.CaracPoil": "Poil (Vigueur)",
-    "CATS.CaracOeil": "Oeil (Agilité)",
-    "CATS.CaracQueue": "Queue (Précision)",
+    "CATS.CaracGriffe": "Griffe",
+    "CATS.CaracPoil": "Poil",
+    "CATS.CaracOeil": "Oeil",
+    "CATS.CaracQueue": "Queue",
     "CATS.CaracChance": "Chance",
-    "CATS.CaracCaresse": "Caresse (intelligence)",
-    "CATS.CaracRonronnement": "Ronronnement (Volonté)",
-    "CATS.CaracCoussinet": "Coussinet (Intuition)",
-    "CATS.CaracVibrisse": "Vibrisse (Sociabilité)",
+    "CATS.CaracCaresse": "Caresse",
+    "CATS.CaracRonronnement": "Ronronnement",
+    "CATS.CaracCoussinet": "Coussinet",
+    "CATS.CaracVibrisse": "Vibrisse",
 
     "CATS.SkillChasse": "Chasse",
     "CATS.SkillCultureGeneral": "Culture General",
